--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "scripts": {
     "watch": "tsc -watch",
     "dev": "nodemon dist/index.js",
-    "dev2": "ts-node-dev --respawn src/index.ts"
+    "dev2": "ts-node-dev --respawn src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   }
 }
