--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@typegoose/typegoose": "^7.4.8",
     "apollo-server-express": "^2.21.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "mongodb": "^3.6.4",
