--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 MONGO_DB_URL=mongodb+srv://ayeolakenny:aA.2969529697@urlshortner.cagee.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
-BASE_URL=http://localhost:4000
+BASE_URL=https://safe-atoll-68588.herokuapp.com/
